[gd_scene load_steps=19 format=3 uid="uid://cw5v4ivweo6bl"]

[ext_resource type="Script" path="res://objects/player/Player.gd" id="1_kiu2d"]
[ext_resource type="SpriteFrames" uid="uid://6xhup71bfrop" path="res://objects/player/player_spriteframes.tres" id="2_gp143"]
[ext_resource type="PackedScene" uid="uid://c10mfic5lq45q" path="res://objects/player/HUD/oxygen_level.tscn" id="3_06578"]
[ext_resource type="Script" path="res://objects/player/PlayerStatemachine.gd" id="4_jvups"]
[ext_resource type="Texture2D" uid="uid://bteqkxejmlhbm" path="res://resources/sprites/light_circle.png" id="5_7idbf"]
[ext_resource type="Script" path="res://objects/player/states/land_idle.gd" id="5_pbnr6"]
[ext_resource type="Script" path="res://objects/player/states/land_move.gd" id="6_2ydie"]
[ext_resource type="Script" path="res://objects/player/states/land_jump.gd" id="6_ih6bu"]
[ext_resource type="Script" path="res://objects/player/states/land_fall.gd" id="8_mtsqc"]
[ext_resource type="Script" path="res://objects/player/states/water_idle.gd" id="9_fkvoy"]
[ext_resource type="Script" path="res://objects/player/states/water_move.gd" id="10_xyd02"]
[ext_resource type="Script" path="res://objects/player/states/water_float.gd" id="11_mb7uq"]
[ext_resource type="Script" path="res://objects/player/states/water_sink.gd" id="12_5gqv5"]
[ext_resource type="PackedScene" uid="uid://bpp4cb8b201on" path="res://objects/player/HUD/ammo_pouch.tscn" id="13_u68c8"]
[ext_resource type="Script" path="res://objects/player/AimIndicator.gd" id="15_ape5n"]
[ext_resource type="Texture2D" uid="uid://dwrel4o0rfjxx" path="res://resources/sprites/arrow.png" id="15_gffn3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f5jfp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hj2cs"]
radius = 7.5

[node name="Player" type="CharacterBody2D"]
z_index = 100
scale = Vector2(2, 2)
collision_layer = 2
script = ExtResource("1_kiu2d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AmmoPouch" parent="CanvasLayer" instance=ExtResource("13_u68c8")]

[node name="OxygenLevel" parent="CanvasLayer" instance=ExtResource("3_06578")]

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_f5jfp")

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("4_jvups")
starting_state = NodePath("land_idle")

[node name="land_idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_fall_state", "land_jump_state", "land_move_state", "water_idle_state")]
script = ExtResource("5_pbnr6")
land_fall_state = NodePath("../land_fall")
land_jump_state = NodePath("../land_jump")
land_move_state = NodePath("../land_move")
water_idle_state = NodePath(".")

[node name="land_move" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_fall_state", "land_jump_state", "land_idle_state", "water_idle_state")]
script = ExtResource("6_2ydie")
land_fall_state = NodePath("../land_fall")
land_jump_state = NodePath("../land_jump")
land_idle_state = NodePath("../land_idle")
water_idle_state = NodePath("../water_idle")

[node name="land_jump" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_fall_state", "land_idle_state", "land_move_state", "water_idle_state")]
script = ExtResource("6_ih6bu")
land_fall_state = NodePath("../land_fall")
land_idle_state = NodePath("../land_idle")
land_move_state = NodePath("../land_move")
water_idle_state = NodePath("../water_idle")

[node name="land_fall" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_idle_state", "land_move_state", "water_idle_state")]
script = ExtResource("8_mtsqc")
land_idle_state = NodePath("../land_idle")
land_move_state = NodePath("../land_move")
water_idle_state = NodePath("../water_idle")

[node name="water_idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("water_sink_state", "water_float_state", "water_move_state")]
script = ExtResource("9_fkvoy")
water_sink_state = NodePath("../water_sink")
water_float_state = NodePath("../water_float")
water_move_state = NodePath("../water_move")

[node name="water_move" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_jump_state", "water_idle_state", "water_float_state", "water_sink_state")]
script = ExtResource("10_xyd02")
land_jump_state = NodePath("../land_jump")
water_idle_state = NodePath("../water_idle")
water_float_state = NodePath("../water_float")
water_sink_state = NodePath("../water_sink")

[node name="water_float" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("land_jump_state", "water_idle_state", "water_move_state", "water_sink_state")]
script = ExtResource("11_mb7uq")
land_jump_state = NodePath("../land_jump")
water_idle_state = NodePath("../water_idle")
water_move_state = NodePath("../water_move")
water_sink_state = NodePath("../water_sink")

[node name="water_sink" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("water_idle_state", "water_move_state", "water_float_state")]
script = ExtResource("12_5gqv5")
water_idle_state = NodePath("../water_idle")
water_move_state = NodePath("../water_move")
water_float_state = NodePath("../water_float")

[node name="StateLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -38.0
offset_right = 20.0
offset_bottom = -15.0
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Head" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2(0, -7.5)
shape = SubResource("CircleShape2D_hj2cs")

[node name="Renderer" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Renderer"]
sprite_frames = ExtResource("2_gp143")
animation = &"land_idle"
autoplay = "land_idle"

[node name="PointLight2D" type="PointLight2D" parent="Renderer"]
energy = 0.5
texture = ExtResource("5_7idbf")
texture_scale = 1.2

[node name="AimIndicator" type="Node2D" parent="."]
script = ExtResource("15_ape5n")

[node name="Arrow" type="Sprite2D" parent="AimIndicator"]
position = Vector2(22.5, 0)
rotation = 0.785397
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_gffn3")
